# cppFactor

./: .clangd  .cursorrules  .gdbinit  .gitignore  CMakeLists.txt
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
docs/: README.md  命名规范.md  常用命令.txt  设计文档.docx
py_/for_test/: pytest_38_all_operators.py
py_/ori_factor/: barra_cne5_10_sizenl.py  barra_cne5_10_sizenl1.py  barra_cne5_10_sizenl2.py  barra_cne5_11_betas.py  barra_cne5_1_beta.py  barra_cne5_1_beta1.py  barra_cne5_1_beta2.py  barra_cne5_1_beta3.py  barra_cne5_1_beta4.py  barra_cne5_2_mom.py  barra_cne5_2_momentum.py  barra_cne5_2_momentum1.py  barra_cne5_2_momentum2.py  barra_cne5_2_momentum3.py  barra_cne5_3_size.py  barra_cne5_3_size1.py  barra_cne5_4_earn.py  barra_cne5_4_earnyild1.py  barra_cne5_4_earnyild2.py  barra_cne5_4_earnyild3.py  barra_cne5_5_resvol.py  barra_cne5_5_resvol1.py  barra_cne5_6_growth.py  barra_cne5_7_btop.py  barra_cne5_7_btop1.py  barra_cne5_7_btopt.py  barra_cne5_7_btopt1.py  barra_cne5_8_leverage.py  barra_cne5_9_liquidity.py  barra_cne5_9_liquidity1.py  barra_cne5_9_liquidity2.py  m_vpc_mut_ty_log1.py  m_vpc_mut_ty_log10.py  m_vpc_mut_ty_log100.py  m_vpc_mut_ty_log1063.py  m_vpc_mut_ty_log11.py  m_vpc_mut_ty_log12.py  m_vpc_mut_ty_log13.py  m_vpc_mut_ty_log14.py  m_vpc_mut_ty_log15.py  (+98 more)
src/DataProcess/: DataProcess.cpp  DataProcess.h
src/Eigen_extra/: Eigen_extra.cpp  Eigen_extra.h  RingVec.cpp  RingVec.h
src/Factor/BarraCne5/: AppDemo.cpp  AppDemo.h  barra_cne5_1_beta.cpp  barra_cne5_1_beta.h  barra_cne5_1_beta1.cpp  barra_cne5_1_beta1.h
src/Factor/MVpcMutTyLog/: m_vpc_mut_ty_log1.cpp  m_vpc_mut_ty_log1.h  m_vpc_mut_ty_log2.cpp  m_vpc_mut_ty_log2.h
src/OnlineBaseFactor/: OnlineBaseFactor.cpp  OnlineBaseFactor.h  OnlineDataCache.cpp  OnlineDataCache.h  OnlineEWMMethod.cpp  OnlineEWMMethod.h  OnlineMethod.cpp  OnlineMethod.h  OnlineUtils.h
src/OnlineBaseFactor/BaseFactor/: BaseFactor.h  correlation_analysis.cpp  descriptive_stats.cpp  linear_regression.cpp  nonparametric_stats.cpp  signal_processing.cpp
src/OnlineBaseFactor/BusinessFactor/: businessfactor.cpp  businessfactor.h  dataprocess.cpp  dataprocess.h
src/Tool/: README.md  Tool.h  config_reader.h  database.cpp  database.h  database_example.cpp  profiler.h  timestamp.h
src/factor_case/: 0001_skew.cpp  0002_kurt.cpp  0003_max.cpp  0004_mean.cpp  0005_min.cpp  0006_std.cpp  0007_scm.cpp  0008_ms.cpp  0009_tb.cpp  0010_dm.cpp  0011_srcm.cpp  0012_trb.cpp  0013_rdm.cpp  0014_ols.cpp  0015_ewm_sum.cpp  0016_ewm_sum_product.cpp  0017_ewm_mean.cpp  0018_ewm_var.cpp  0019_ewm_cov.cpp  0020_ewm_sum_product3.cpp  0021_ewm_skew.cpp  5001_barra_cne5_1_beta.cpp  5002_barra_cne5_1_beta1.cpp  6001_m_vpc_mut_ty_log1.cpp  6002_m_vpc_mut_ty_log2.cpp  AppDemo.cpp  AppDemo.h
src/factor_case/testcase/0001_skew/: output.csv  py_output.csv
src/factor_case/testcase/0002_kurt/: output.csv  py_output.csv
src/factor_case/testcase/0003_max/: output.csv  py_output.csv
src/factor_case/testcase/0004_mean/: input.csv  output.csv  py_output.csv
src/factor_case/testcase/0005_min/: output.csv  py_output.csv
src/factor_case/testcase/0006_std/: output.csv  py_output.csv
src/factor_case/testcase/0007_scm/: output.csv  py_output.csv
src/factor_case/testcase/0008_ms/: output.csv  py_output.csv
src/factor_case/testcase/0009_tb/: output.csv  py_output.csv
src/factor_case/testcase/0010_dm/: output.csv  py_output.csv
src/factor_case/testcase/0011_srcm/: output.csv  py_output.csv
src/factor_case/testcase/0012_trb/: output.csv  py_output.csv
src/factor_case/testcase/0013_rdm/: input.csv  output.csv  py_output.csv
src/factor_case/testcase/0014_ols/: generate_1000x1005_data.py  output.csv  py_output.csv  y_input.csv
src/factor_case/testcase/0014_ols/bk/: output.csv  output_.csv  py_output.csv  py_output_.csv  x_input.csv  y_input.csv
src/factor_case/testcase/0015_ewm_sum/: py_output.csv
src/factor_case/testcase/0016_ewm_sum_product/: output.csv  py_output.csv
src/factor_case/testcase/0017_ewm_mean/: output.csv
src/factor_case/testcase/0018_ewm_var/: output.csv  py_output.csv  weight.csv
src/factor_case/testcase/0019_ewm_cov/: output.csv  py_output.csv
src/factor_case/testcase/0020_ewm_sum_product3/: initial_z.csv  output.csv  py_output.csv  update_z.csv
src/factor_case/testcase/0021_ewm_skew/: output.csv  output_py.csv  py_output.csv  weight.csv
src/factor_case/testcase/5001_cne5_1_beta/: generate_test_data.py  output.csv  output_old.csv  output_online_performance.csv  output_performance.csv  output_performance_old.csv  output_py.csv  性能测试分析
src/factor_case/testcase/5002_cne5_1_beta1/: analyze_outputs.py  generate_test_data.py  input_cap.csv  input_ret.csv  input_valid.csv  output.csv  output_performance.csv  output_py.csv
src/factor_case/testcase/6001_m_vpc_mut_ty_log1/: generate_test_data.py  input_amt.csv  input_close.csv  output.csv  output_performance.csv  output_py.csv
src/factor_case/testcase/6002_m_vpc_mut_ty_log2/: generate_test_data.py  input_amt.csv  input_close.csv  output.csv  output_performance.csv  output_py.csv
src/include/: TradeConstants.h
